edited main content

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     
     postures 
     mudras
-    techniques 
-    pranayama meaning 
+    techniques including pranayama  
     useful tips 
 
 </body>
