Add comments in html favicon and beginning of nav menu

--- a/index.html
+++ b/index.html
@@ -3,12 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="So Hum. A beginners meditation website explaining techniques and benefits of meditation.">
+    <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, mudras">
+
+<!-- Title of website and favicon -->
     <title>So Hum</title>
+    <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="apple-touch-icon">
+    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="android-chrome-192x192">
+    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
+
+    <!-- style sheet link -->
+    <link rel="stylesheet" href="assets/style.css">
+
 </head>
 <body>
-    So Hum 
-    So - to inhale 
-    Hum - to exhale 
+
+    <!-- Header -->
+    <h1>So Hum</h1>
+
+    <!-- Nav Menu -->
+    <nav></nav>
+    <br> 
+    <!-- Opening text -->
+    <p>So - to inhale 
+    Hum - to exhale</p>
+    <br>
+    <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
+
+
 
     
     postures 
