--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     <h1>So Hum</h1>
 
     <!-- Nav Menu -->
-    <nav></nav>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="techniques.html" class="">Techniques</a></li>
+            <li><a href="postures.html">Postures</a></li>
+            <li><a href="mudras.html">Mudras</a></li>
+        </ul>
+    </nav>
     <br> 
     <!-- Opening text -->
     <p>So - to inhale 
