Add benefits section and footer

--- a/index.html
+++ b/index.html
@@ -37,15 +37,31 @@
     <p>So - to inhale 
     Hum - to exhale</p>
     <br>
-    <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
+    <!-- Insert image here for background of this div -->
+    <div>
+        <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
+    </div>
 
+    <!-- Benefits section -->
+    <div>
+        <h3>Benefits of Meditation:</h3>
+        <p>
+            <ul>
+                <li>Promotes emotional health by reducing stress, anxiety and depression</li>
+                <li>Accessible anywhere</li>
+                <li>Decreases blood pressure</li>
+                <li>Improves sleep</li>
+                <li>Can generate kindness to yourself and others</li>
+                <li>Helps control addictions and pain</li>
+            </ul>
+        </p>
 
-
+    </div>
     
-    postures 
-    mudras
-    techniques including pranayama  
-    useful tips 
+    <!-- Footer -->
+    <footer>
+
+    </footer>
 
 </body>
 </html>
