Update style sheet location and link. Add font awesome kit.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
 
     <!-- style sheet link -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
 </head>
 <body>
@@ -57,11 +57,21 @@
         </p>
 
     </div>
-    
+
     <!-- Footer -->
     <footer>
-
+        <h4>Follow us on social media for more meditation inspiration and techniques</h4>
+<!-- add links in here to facebook, instagram and twitter -->
+        <a href="http://www.facebook.com" target="_blank" rel="noopener"
+            aria-label="Visit our facebook page! Opens in a new tab"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="http://www.instagram.com" target="_blank" rel="noopener"
+            aria-label="Visit our instagram page! Opens in a new tab"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://www.twitter.com" target="_blank" rel="noopener"
+            aria-label="Visit our twitter page! Opens in a new tab"><i class="fa-brands fa-x-twitter"></i></a>
     </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/d3c8a1407b.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
