Update title of pages

--- a/techniques.html
+++ b/techniques.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>So Hum - Techniques</title>
+    <title>Techniques</title>
 
         <!-- Meta tags for search engines -->
         <meta name="description" content="So Hum. A beginners meditation website explaining techniques and benefits of meditation.">
