--- a/postures.html
+++ b/postures.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Postures</title>
 
         <!-- Meta tags for search engines -->
         <meta name="description" content="So Hum. A beginners meditation website explaining techniques and benefits of meditation.">
