Add content to techniques.html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
     </div>
 
+    <!-- Purpose of website -->
+    <div>
+        <p>On this website you will find a number of different techniques, postures and mudras to start you on your
+            meditation journey.</p>
+    </div>
+
+    
     <!-- Benefits section -->
     <div>
         <h3>Benefits of Meditation:</h3>
