--- a/mudras.html
+++ b/mudras.html
@@ -34,5 +34,19 @@
         </ul>
     </nav>
 
+<!-- Footer -->
+<footer>
+    <h4>Follow us on social media for more meditation inspiration and techniques</h4>
+    <!-- add links in here to facebook, instagram and twitter -->
+    <a href="http://www.facebook.com" target="_blank" rel="noopener"
+        aria-label="Visit our facebook page! Opens in a new tab"><i class="fa-brands fa-square-facebook"></i></a>
+    <a href="http://www.instagram.com" target="_blank" rel="noopener"
+        aria-label="Visit our instagram page! Opens in a new tab"><i class="fa-brands fa-instagram"></i></a>
+    <a href="http://www.twitter.com" target="_blank" rel="noopener"
+        aria-label="Visit our twitter page! Opens in a new tab"><i class="fa-brands fa-x-twitter"></i></a>
+</footer>
+
+<!-- Font Awesome kit -->
+<script src="https://kit.fontawesome.com/d3c8a1407b.js" crossorigin="anonymous"></script>
 </body>
 </html>
