--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             meditation journey.</p>
     </div>
 
-    
+
     <!-- Benefits section -->
     <div>
         <h3>Benefits of Meditation:</h3>
@@ -70,11 +70,11 @@
         <h4>Follow us on social media for more meditation inspiration and techniques</h4>
 <!-- add links in here to facebook, instagram and twitter -->
         <a href="http://www.facebook.com" target="_blank" rel="noopener"
-            aria-label="Visit our facebook page! Opens in a new tab"><i class="fa-brands fa-square-facebook"></i></a>
+            aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="http://www.instagram.com" target="_blank" rel="noopener"
-            aria-label="Visit our instagram page! Opens in a new tab"><i class="fa-brands fa-instagram"></i></a>
+            aria-label="Visit our instagram page! Opens in a new tab" class="socialmedia"><i class="fa-brands fa-instagram"></i></a>
             <a href="http://www.twitter.com" target="_blank" rel="noopener"
-            aria-label="Visit our twitter page! Opens in a new tab"><i class="fa-brands fa-x-twitter"></i></a>
+            aria-label="Visit our twitter page! Opens in a new tab" class="socialmedia"><i class="fa-brands fa-x-twitter"></i></a>
     </footer>
 
     <!-- Font Awesome kit -->
