Add and experiment with navigation menu on index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     <h1>So Hum</h1>
 
     <!-- Nav Menu -->
+
+    <input type="checkbox" name="navigation" id="navigation">
+    <label for="navigation" class="navigation-label"><!-- place icon here for nav menu --></label>
     <nav>
-        <ul>
+        <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="techniques.html" class="">Techniques</a></li>
             <li><a href="postures.html">Postures</a></li>
