--- a/mudras.html
+++ b/mudras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mudras</title>
+    <title>So Hum - Mudras</title>
 
 
         <!-- Meta tags for search engines -->
@@ -11,7 +11,7 @@
         <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, mudras">
     
     <!-- Title of website and favicon -->
-        <title>So Hum</title>
+        <title>So Hum - Mudras</title>
         <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="apple-touch-icon">
         <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="android-chrome-192x192">
         <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
@@ -22,7 +22,7 @@
 <body>
     
     <!-- Header -->
-    <h1>Techniques</h1>
+    <h1>Mudras</h1>
 
     <!-- Nav Menu -->
     <nav>
