--- a/postures.html
+++ b/postures.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Postures</title>
+    <title>So Hum - Postures</title>
 
         <!-- Meta tags for search engines -->
         <meta name="description" content="So Hum. A beginners meditation website explaining techniques and benefits of meditation.">
         <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, mudras">
     
     <!-- Title of website and favicon -->
-        <title>So Hum</title>
+        <title>Postures</title>
         <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="apple-touch-icon">
         <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="android-chrome-192x192">
         <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
