--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <!-- Nav Menu -->
 
-    <input type="checkbox" name="navigation" id="navigation">
-    <label for="navigation" class="navigation-label"><!-- place icon here for nav menu --></label>
+    <input type="button" name="navigation" id="navigation">
+    <label for="navigation" class="navigation-label"><i class="fa-solid fa-spa"></i></label>
     <nav>
         <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
