--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 
 </head>
 <body>
-
+<section id="header">
     <!-- Header -->
-    <h1>So Hum</h1>
-
+    <header>
+        <a href="http://index.html">
+        <h1 id="logo">So Hum</h1>
+        </a>
+    </header>
     <!-- Nav Menu -->
 
     <input type="button" name="navigation" id="navigation">
@@ -31,11 +34,12 @@
         <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="techniques.html" class="">Techniques</a></li>
-            <li><a href="postures.html">Postures</a></li>
-            <li><a href="mudras.html">Mudras</a></li>
+            <li><a href="postures.html" class="">Postures</a></li>
+            <li><a href="mudras.html" class="">Mudras</a></li>
         </ul>
     </nav>
-    <br> 
+</section>
+    
     <!-- Opening text -->
     <p>So - to inhale 
     Hum - to exhale</p>
