Add styling to navigation and header

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <a href="http://index.html">
         <h1 id="logo">So Hum</h1>
         </a>
-    </header>
+    
     <!-- Nav Menu -->
 
-    <input type="button" name="navigation" id="navigation">
+    <input type="checkbox" name="navigation" id="navigation-toggle">
     <label for="navigation" class="navigation-label"><i class="fa-solid fa-spa"></i></label>
     <nav>
         <ul id="menu">
@@ -38,6 +38,7 @@
             <li><a href="mudras.html" class="">Mudras</a></li>
         </ul>
     </nav>
+</header>
 </section>
     
     <!-- Opening text -->
