Add styling to first section and correct header position

--- a/index.html
+++ b/index.html
@@ -40,15 +40,21 @@
     </nav>
 </header>
 </section>
-    
+
+
+<main>
     <!-- Opening text -->
-    <p>So - to inhale 
-    Hum - to exhale</p>
-    <br>
+    <section id="definition">
+        <p>So - to inhale</p>
+        <p>Hum - to exhale</p>
+    </section>
+    
     <!-- Insert image here for background of this div -->
-    <div>
-        <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
-    </div>
+    <section id="main-photo">
+        <div>
+            <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
+        </div>
+    </section>
 
     <!-- Purpose of website -->
     <div>
@@ -72,6 +78,8 @@
         </p>
 
     </div>
+    </main>
+
 
     <!-- Footer -->
     <footer>
