Adjust header content and style

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <a href="http://index.html">
         <h1 id="logo">So Hum</h1>
         </a>
+        <div id="definition">
+            <p>to inhale</p>
+            <br>
+            <p>to exhale</p>
+            </div>
     
     <!-- Nav Menu -->
 
@@ -42,13 +47,7 @@
 </section>
 
 
-<main>
-    <!-- Opening text -->
-    <section id="definition">
-        <p>So - to inhale</p>
-        <p>Hum - to exhale</p>
-    </section>
-    
+<main>  
     <!-- Insert image here for background of this div -->
     <section id="main-photo">
         <div>
