Add flex properties and styling to header, website meaning  and nav

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
         <a href="http://index.html">
         <h1 id="logo">So Hum</h1>
         </a>
-        <div id="definition">
-            <p>to inhale</p>
-            <br>
-            <p>to exhale</p>
-            </div>
+        
     
     <!-- Nav Menu -->
 
@@ -43,6 +39,11 @@
             <li><a href="mudras.html" class="">Mudras</a></li>
         </ul>
     </nav>
+
+    <div id="definition">
+        <p>to inhale, to exhale</p>
+        </div>
+
 </header>
 </section>
 
