Add font style to p and background image for home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 <main>  
     <!-- Insert image here for background of this div -->
     <section id="main-photo">
-        <div>
+        <img id="background-image-main"
+            src="../assets/images/Main_background_image.jpg"
+            alt="pile of meditation stones on water with sunset">
+        <div id="quote-home">
             <p>"An advanced meditator is someone who sits everyday as that is the hardest part."</p>
         </div>
     </section>
