Add style to section of website called purpose

--- a/index.html
+++ b/index.html
@@ -57,10 +57,15 @@
     </section>
 
     <!-- Purpose of website -->
-    <div>
-        <p>On this website you will find a number of different techniques, postures and mudras to start you on your
+    <section id="purpose">
+        <img id= "purpose-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
+    <div id="purpose-text">
+        <p>On this website you will find a number
+            of different techniques, postures
+            and mudras to start you on your
             meditation journey.</p>
     </div>
+    </section>
 
 
     <!-- Benefits section -->
