Add float style to purpose section

--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
     <section id="purpose">
         <img id= "purpose-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
     <div id="purpose-text">
-        <p>On this website you will find a number
-            of different techniques, postures
-            and mudras to start you on your
-            meditation journey.</p>
+        <p>On this website you will find a number of different techniques, postures
+            <br>and mudras to start you on your meditation journey.</p>
     </div>
     </section>
 
 
     <!-- Benefits section -->
+    <section id="benefits">
     <div>
         <h3>Benefits of Meditation:</h3>
         <p>
@@ -83,6 +82,7 @@
         </p>
 
     </div>
+    </section>
     </main>
 
 
