Edit header style css and ID tags removed from other pages

--- a/techniques.html
+++ b/techniques.html
@@ -25,7 +25,7 @@
 
         <header>
             <a href="http://index.html">
-            <h1 id="other-pages-logo">Techniques</h1>
+            <h1>Techniques</h1>
             </a>
         
         <!-- Nav Menu -->
