--- a/index.html
+++ b/index.html
@@ -82,16 +82,19 @@
     <footer>
         <!-- add links in here to facebook, instagram and twitter -->
             <ul id="socialmedia">
-           <li><a href="http://www.facebook.com" target="_blank" rel="noopener"
-                aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i
-                    class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="http://www.instagram.com" target="_blank" rel="noopener"
-                aria-label="Visit our instagram page! Opens in a new tab" class="socialmedia"><i
-                    class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="http://www.twitter.com" target="_blank" rel="noopener"
-                aria-label="Visit our twitter page! Opens in a new tab" class="socialmedia"><i
-                    class="fa-brands fa-x-twitter"></i></a></li>
-                    </ul>
+                <li><a href="http://www.facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i
+                            class="fa-brands fa-square-facebook"></i></a></li>
+                <li><a href="http://www.instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our instagram page! Opens in a new tab" class="socialmedia"><i
+                            class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="http://www.twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our twitter page! Opens in a new tab" class="socialmedia"><i
+                            class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="http://www.youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube page! Opens in a new tab" class="socialmedia"><i
+                            class="fa-brands fa-youtube"></i></a></li>
+            </ul>
         
     </footer>
 
