--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     </section>
 
     <!-- Benefits -->
-    <section id="purpose">
-        <img id= "purpose-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
+    <section id="benefits">
+        <img id= "benefits-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
 
-        <div id="benefits">
+        <div id="benefits-list">
             <h3>Benefits of Meditation:</h3>
             <p>
-                <ul>
+                <ul id="benefits-meditation">
                     <li>Promotes emotional health by reducing stress, anxiety and depression</li>
                     <li>Accessible anywhere</li>
                     <li>Decreases blood pressure</li>
