Edit footer html for mudras techniques and postures to match home page

--- a/mudras.html
+++ b/mudras.html
@@ -46,17 +46,26 @@
 
 <!-- Footer -->
 <footer>
-    <h4>Follow us on social media for more meditation inspiration and techniques</h4>
     <!-- add links in here to facebook, instagram and twitter -->
-    <a href="http://www.facebook.com" target="_blank" rel="noopener"
-        aria-label="Visit our facebook page! Opens in a new tab"><i class="fa-brands fa-square-facebook"></i></a>
-    <a href="http://www.instagram.com" target="_blank" rel="noopener"
-        aria-label="Visit our instagram page! Opens in a new tab"><i class="fa-brands fa-instagram"></i></a>
-    <a href="http://www.twitter.com" target="_blank" rel="noopener"
-        aria-label="Visit our twitter page! Opens in a new tab"><i class="fa-brands fa-x-twitter"></i></a>
+    <ul id="socialmedia">
+        <li><a href="http://www.facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i
+                    class="fa-brands fa-square-facebook"></i></a></li>
+        <li><a href="http://www.instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our instagram page! Opens in a new tab" class="socialmedia"><i
+                    class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="http://www.twitter.com" target="_blank" rel="noopener"
+                aria-label="Visit our twitter page! Opens in a new tab" class="socialmedia"><i
+                    class="fa-brands fa-x-twitter"></i></a></li>
+        <li><a href="http://www.youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page! Opens in a new tab" class="socialmedia"><i
+                    class="fa-brands fa-youtube"></i></a></li>
+    </ul>
+
 </footer>
 
 <!-- Font Awesome kit -->
 <script src="https://kit.fontawesome.com/d3c8a1407b.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
