Add image to counting technique on techniques page

--- a/techniques.html
+++ b/techniques.html
@@ -83,7 +83,7 @@
             <p>Count the breaths on the inhale and exhale. Inhale 1, exhale 2 up to 10 and then repeat.</p>
             <p>Count freely up to 100 in a language of your choice. Once you reach 100 repeat. Can also be done in reverse.</p>
         </div>
-        <img id="techniques-image" src="../assets/images/noting.jpg" alt="Man stood outside with eyes closed">
+        <img id="techniques-image" src="../assets/images/counting-technique.jpeg" alt="card full of numbers from 1 to 100">
 
         <div id="techniques-option">
             <h4>Samatha</h4>
