Add content and styling to techniques page section getting started

--- a/techniques.html
+++ b/techniques.html
@@ -43,8 +43,23 @@
     </header>
     </section>
     <!-- Main content of page -->
+
+<section id="getting-started">
+    <div id="getting-started-text">
+        <h4>Getting Started</h4>
+        <p>Relax... Meditation comes in many forms and reeps benefits to the practitioner.
+            To start, find a quiet place with little distraction for you to dedicate your time for your meditation.
+            See our <a href="postures.html" id="postures-link">postures</a> page for recommendations on how to make yourself comfortable for your
+            practice.
+        </p>
+        <p>You can practice meditation individually or as part of a group. Try searching for meditation groups in your local area to 
+            find a community you can meditate with. 
+        </p>
+    </div>
+</section>
 <section id="techniques">
-    
+
+   
         <div id="techniques-option">
             <h4>Mantra Meditation</h4>
             <h5>What is it?</h5>
