Add content to getting started section on techniques page

--- a/techniques.html
+++ b/techniques.html
@@ -49,11 +49,21 @@
         <h4>Getting Started</h4>
         <p>Relax... Meditation comes in many forms and reeps benefits to the practitioner.
             To start, find a quiet place with little distraction for you to dedicate your time for your meditation.
-            See our <a href="postures.html" id="postures-link">postures</a> page for recommendations on how to make yourself comfortable for your
+            <br>
+            <br>
+            It is normal for the mind to wander at the beginning of your journey. Be patient with yourself and think of it as a marathon and
+            not a sprint. You wouldn't run a marathon without training first so think of your meditation as training for the
+            longer practices
+            in the future.
+            <br>
+            <br>
+            See our <a href="postures.html" id="postures-link">postures</a> page for recommendations on how to make yourself
+            comfortable for your
             practice.
-        </p>
-        <p>You can practice meditation individually or as part of a group. Try searching for meditation groups in your local area to 
-            find a community you can meditate with. 
+            <br>
+            <br>
+            Below are some options to help you choose which one is best for you and your practice. You can also vary your
+            pratice by changing your technique.
         </p>
     </div>
 </section>
