Add image to getting started section and update flex styling

--- a/techniques.html
+++ b/techniques.html
@@ -66,6 +66,8 @@
             pratice by changing your technique.
         </p>
     </div>
+    <img id="getting-started-image" src="../assets/images/getting-started.jpg"
+        alt="woman sitting in seated meditation with mountain landscape">
 </section>
 <section id="techniques">
 
