Update file path for css and font selection position in css

--- a/techniques.html
+++ b/techniques.html
@@ -16,7 +16,7 @@
         <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
     
         <!-- style sheet link -->
-        <link rel="stylesheet" href="../assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
@@ -68,6 +68,7 @@
     <img id="getting-started-image" src="../assets/images/getting-started.jpg"
         alt="woman sitting in seated meditation with mountain landscape">
 </section>
+
 <section id="techniques">
 
    
@@ -100,7 +101,7 @@
             <h5>What is it?</h5>
             <p>To mentally scan your body during a meditation with visualisation or just checking to see how each part of the
                 body is feeling in that moment. </p>
-            </div>
+        </div>
             <img id="techniques-image" src="../assets/images/noting.jpg" alt="Man stood outside with eyes closed">
 
         <div id="techniques-option">
