Add parallax to home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 </head>
 <body>
-    <section id="header">
         <!-- Header -->
         <header>
             <a href="http://index.html">
@@ -44,12 +43,12 @@
         </div>
 
         </header>
-    </section>
+    
 
 
 <main>  
     <!-- Insert image here for background of this div -->
-    <section id="main-photo">
+    <section id="main-photo-parallax">
         <div id="quote-home">
             <h4>"An advanced meditator is someone who sits everyday as that is the hardest part."</h4>
         </div>
