--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="benefits">
         <img id= "benefits-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
 
-        <div id="benefits-list">
+        <div>
             <h3>Benefits of Meditation:</h3>
             <p>
                 <ul id="benefits-meditation">
