--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <section id="benefits">
         <img id= "benefits-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
 
-        <div>
+        <div id="benefits-text">
             <h3>Benefits of Meditation:</h3>
             <p>
-                <ul id="benefits-meditation">
+                <ul>
                     <li>Promotes emotional health by reducing stress, anxiety and depression</li>
                     <li>Accessible anywhere</li>
                     <li>Decreases blood pressure</li>
