Add style to background image on home page and adjust alignment of benefits section. Commented out code for a look in preview

--- a/index.html
+++ b/index.html
@@ -48,16 +48,15 @@
 
 <main>  
     <!-- Insert image here for background of this div -->
-    <section id="main-photo-parallax">
+    <section class="main-photo-parallax">
         <div id="quote-home">
             <h4>"An advanced meditator is someone who sits everyday as that is the hardest part."</h4>
         </div>
     </section>
 
     <!-- Benefits -->
-    <section id="benefits">
-        <img id= "benefits-image" src="../assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap">
-
+    <section id="benefits" class="benefits-parallax">
+        <!-- <img src="assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap wearing red robe"> -->
         <div id="benefits-text">
             <h3>Benefits of Meditation:</h3>
             <p>
