Add more content in commented out code for home page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <main>  
     <!-- Insert image here for background of this div -->
-    <section class="main-photo-parallax">
+    <section class="welcome-photo-parallax">
         <div id="quote-home">
             <h4>"An advanced meditator is someone who sits everyday as that is the hardest part."</h4>
         </div>
@@ -72,7 +72,17 @@
     
         </div>
     </section>
-
+<!-- 
+    <section>
+        When to practice meditation
+    </section>
+-->
+    <!-- 
+    <section>
+        
+    </section>
+    -->
+</main>
 
 
     <!-- Footer -->
