Add more relevant keywords to meta search

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Meta tags for search engines -->
     <meta name="description" content="So Hum. A beginners meditation website explaining techniques and benefits of meditation.">
-    <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, mudras">
+    <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, meditation techniques, how to meditate">
 
 <!-- Title of website and favicon -->
     <title>So Hum</title>
