Add content to index.html and styling to new content

--- a/index.html
+++ b/index.html
@@ -51,10 +51,32 @@
     <section class="welcome-photo-parallax">
         <div id="quote-home">
             <h4>"An advanced meditator is someone who sits everyday as that is the hardest part."</h4>
+            <p>Welcome to the first steps of your meditation journey. 
+                <br>
+                Here we will introduce a number of techniques and postures
+                for you to experiment with until you find a practice that you enjoy. 
+            </p>
         </div>
     </section>
 
     <!-- Benefits -->
+
+    <section id="roots" class="roots-parallax">
+        <h3>The Roots of Meditation</h3>
+        <p>Meditation comes from the Latin term "to ponder" and is used as an umbrella term for a variety of practices. 
+            <br>
+            Some of which are demonstrated on this website on the <a href="techniques.html">techniques</a> page. 
+            <br>
+            The origin of meditation has been debated for years and has been argued to have started at the beginnings of our beings 
+            with fire gazing meditation to be one of the first practiced 200,000 years ago. 
+            <br>
+            The practices were passed on orally before being commited
+            to writing. The earliest written records appear in the Hindu Vedas around 1500 BCE but they were believed to have been 
+            practiced since 3000 BCE.
+            <br>
+            From Meditation came mindfulness meditation.  
+    </section>
+
     <section id="benefits" class="benefits-parallax">
         <!-- <img src="assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap wearing red robe"> -->
         <div id="benefits-text">
@@ -72,11 +94,7 @@
     
         </div>
     </section>
-<!-- 
-    <section>
-        When to practice meditation
-    </section>
--->
+
     <!-- 
     <section>
         
