Add parallax on home page for roots section and adjust min-height of quote home

--- a/index.html
+++ b/index.html
@@ -62,19 +62,26 @@
     <!-- Benefits -->
 
     <section id="roots" class="roots-parallax">
+        <div id="roots-text">
         <h3>The Roots of Meditation</h3>
         <p>Meditation comes from the Latin term "to ponder" and is used as an umbrella term for a variety of practices. 
             <br>
+            <br>
             Some of which are demonstrated on this website on the <a href="techniques.html">techniques</a> page. 
+            <br>
             <br>
             The origin of meditation has been debated for years and has been argued to have started at the beginnings of our beings 
             with fire gazing meditation to be one of the first practiced 200,000 years ago. 
+            <br>
             <br>
             The practices were passed on orally before being commited
             to writing. The earliest written records appear in the Hindu Vedas around 1500 BCE but they were believed to have been 
             practiced since 3000 BCE.
             <br>
+            <br>
             From Meditation came mindfulness meditation.  
+            </p>
+        </div>    
     </section>
 
     <section id="benefits" class="benefits-parallax">
