Add more content to home page and add signup.html page including links in nav manu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="techniques.html" class="">Techniques</a></li>
                 <li><a href="postures.html" class="">Postures</a></li>
+                <li><a href="signup.html" class="">Sign Up</a></li>
             </ul>
         </nav>
 
@@ -59,7 +60,7 @@
         </div>
     </section>
 
-    <!-- Benefits -->
+    <!-- Roots section  -->
 
     <section id="roots" class="roots-parallax">
         <div id="roots-text">
@@ -84,6 +85,8 @@
         </div>    
     </section>
 
+<!-- Benefits section -->
+
     <section id="benefits" class="benefits-parallax">
         <!-- <img src="assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap wearing red robe"> -->
         <div id="benefits-text">
@@ -102,17 +105,28 @@
         </div>
     </section>
 
-    <!-- 
     <section>
-        
+        <div>
+            <h3>Join our Group Meditation</h3>
+            <p>Someone else started exactly where you have started today. Curious and open to learning. 
+            <br>
+            <br>
+            As you can see from the benefits above Meditation is not a selfish practice but a selfless one too. Thus it doesn't 
+            have to be practiced alone. 
+            <br>
+            <br>
+             The benfits of joining a group meditation are building a habit of attending, having a dedicated teacher at each practice,
+             sharing your experience with others, 
+            </p>
+        </div>
     </section>
-    -->
+
 </main>
 
 
     <!-- Footer -->
     <footer>
-        <!-- add links in here to facebook, instagram and twitter -->
+        <!-- add links in here to facebook, instagram, twitter and youtube -->
             <ul id="socialmedia">
                 <li><a href="http://www.facebook.com" target="_blank" rel="noopener"
                         aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i
