--- a/postures.html
+++ b/postures.html
@@ -37,6 +37,7 @@
                 <li><a href="index.html" class="">Home</a></li>
                 <li><a href="techniques.html" class="">Techniques</a></li>
                 <li><a href="postures.html" class="active">Postures</a></li>
+                <li><a href="signup.html" class="">Sign Up</a></li>
             </ul>
         </nav>
     </header>
