--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
 
         <header>
             <a href="http://index.html">
-            <h1 id="other-pages-logo">Mudras</h1>
+            <h1 id="other-pages-logo">Sign Up</h1>
             </a>
         
         <!-- Nav Menu -->
@@ -38,7 +38,7 @@
                 <li><a href="index.html" class="">Home</a></li>
                 <li><a href="techniques.html" class="">Techniques</a></li>
                 <li><a href="postures.html" class="">Postures</a></li>
-                <li><a href="mudras.html" class="active">Mudras</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
