--- a/index.html
+++ b/index.html
@@ -105,18 +105,25 @@
         </div>
     </section>
 
-    <section>
-        <div>
-            <h3>Join our Group Meditation</h3>
-            <p>Someone else started exactly where you have started today. Curious and open to learning. 
+    <section id="journey" class="journey-parallax">
+        <div id="journey-text">
+            <h3>Let your Meditation journey grow</h3>
+            <p>Someone else started exactly where you have started today. 
             <br>
             <br>
-            As you can see from the benefits above Meditation is not a selfish practice but a selfless one too. Thus it doesn't 
+            As you can see from the benefits above Meditation is not a selfish practice but a selfless one too. Plus it doesn't 
             have to be practiced alone. 
             <br>
             <br>
              The benfits of joining a group meditation are building a habit of attending, having a dedicated teacher at each practice,
-             sharing your experience with others, 
+             sharing your experience with others, the physical and mental health benefits of being involved in a social group. 
+             <br>
+             <br>
+             Studies have also shown the ripple effect of practing your meditation in a peaceful environment surrounded by a group of 
+             likeminded people. 
+             <br>
+             <br>
+             <a href="http://signup.html">Sign Up</a> to find our group meditations near you. 
             </p>
         </div>
     </section>
