Fix sign up link on home page error

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
              likeminded people. 
              <br>
              <br>
-             <a href="http://signup.html">Sign Up</a> to find our group meditations near you. 
+             <a href="signup.html">Sign Up</a> to find our group meditations near you. 
             </p>
         </div>
     </section>
