Add hover for links effect

--- a/techniques.html
+++ b/techniques.html
@@ -24,7 +24,7 @@
     <section id="header">
 
         <header>
-            <a href="http://index.html">
+            <a href="index.html">
             <h1>Techniques</h1>
             </a>
         
