--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
         <!-- Header -->
         <header>
-            <a href="http://index.html">
+            <a href="index.html">
             <h1 id="logo">So Hum</h1>
             </a>
             
