--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
      <section id="header">
 
         <header>
-            <a href="http://index.html">
+            <a href="index.html">
             <h1 id="other-pages-logo">Sign Up</h1>
             </a>
         
