Add sign up page content and form

--- a/signup.html
+++ b/signup.html
@@ -44,6 +44,49 @@
     </header>
     </section>
 
+<main>
+
+    <section class="sign-up-form">
+        <form action="sign-up-form" action="" method="post">
+            <h2>Join our group meditations near you</h2>
+            <label for="firstname">First Name</label>
+            <input type="text" id="" name="firstname" required>
+            <br>
+            <label for="lastname">Last Name</label>
+            <input type="text" id="" name="lastname" required>
+            <br>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email"required>
+            <br>
+            <label for="location">Location</label>
+            <input type="text" id="location" name="location" required>
+            <br>
+            <div class="radio-buttons">
+                <h6>When do you want to meditate?</h6>
+                <label for="morning">Morning</label>
+                <input type="radio" name="time-preference" id="" value="" required checked>
+                <label for="afternoon">Afternoon</label>
+                <input type="radio" name="time-preference" id="" value="" required>
+                <label for="evening">Evening</label>
+                <input type="radio" name="time-preference" id="" value="" required>
+                <br>
+                <h6>How often do you want to join our group meditations?</h6>
+                <label for="once-a-week">Once a week</label>
+                <input type="radio" name="how-often" id="once-a-week" value="once-a-week" required checked>
+                <label for="twice-a-week">Twice a week</label>
+                <input type="radio" name="how-often" id="twice-a-week" value="twice-a-week" required>
+                <label for="fortnightly">Fortnightly</label>
+                <input type="radio" name="how-often" id="fortnightly" value="fortnightly" required>
+                <label for="once-month">Once a month</label>
+                <input type="radio" name="how-often" id="once-month" value="once-month" required>
+                <label for="not-sure">Not sure yet</label>
+                <input type="radio" name="how-often" id="not-sure" value="not-sure" required>
+            </div>
+            <button type="submit" class="join-button">Submit</button>
+        </form>
+    </section>
+
+</main>
 <!-- Footer -->
 <footer>
     <!-- add links in here to facebook, instagram and twitter -->
