Add higher value to margin top of quote home

--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
 
         <header>
             <a href="index.html">
-            <h1 id="other-pages-logo">Sign Up</h1>
+            <h1 id="other-pages-logo">So Hum</h1>
             </a>
         
         <!-- Nav Menu -->
@@ -41,6 +41,11 @@
                 <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
+
+        <div id="definition">
+            <p>to inhale, to exhale</p>
+        </div>
+        
     </header>
     </section>
 
