--- a/postures.html
+++ b/postures.html
@@ -24,8 +24,8 @@
      <section id="header">
 
         <header>
-            <a href="http://index.html">
-            <h1 id="other-pages-logo">Postures</h1>
+            <a href="index.html">
+            <h1 id="other-pages-logo">So Hum</h1>
             </a>
         
         <!-- Nav Menu -->
@@ -36,10 +36,15 @@
             <ul id="menu">
                 <li><a href="index.html" class="">Home</a></li>
                 <li><a href="techniques.html" class="">Techniques</a></li>
-                <li><a href="postures.html" class="active">Postures</a></li>
-                <li><a href="signup.html" class="">Sign Up</a></li>
+                <li><a href="postures.html" class="">Postures</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
+
+        <div id="definition">
+            <p>to inhale, to exhale</p>
+        </div>
+        
     </header>
     </section>
 
