--- a/techniques.html
+++ b/techniques.html
@@ -25,7 +25,7 @@
 
         <header>
             <a href="index.html">
-            <h1>Techniques</h1>
+            <h1 id="other-pages-logo">So Hum</h1>
             </a>
         
         <!-- Nav Menu -->
@@ -35,11 +35,16 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="">Home</a></li>
-                <li><a href="techniques.html" class="active">Techniques</a></li>
+                <li><a href="techniques.html" class="">Techniques</a></li>
                 <li><a href="postures.html" class="">Postures</a></li>
-                <li><a href="signup.html" class="">Sign Up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
+
+        <div id="definition">
+            <p>to inhale, to exhale</p>
+        </div>
+        
     </header>
     </section>
     <!-- Main content of page -->
