--- a/postures.html
+++ b/postures.html
@@ -36,8 +36,8 @@
             <ul id="menu">
                 <li><a href="index.html" class="">Home</a></li>
                 <li><a href="techniques.html" class="">Techniques</a></li>
-                <li><a href="postures.html" class="">Postures</a></li>
-                <li><a href="signup.html" class="active">Sign Up</a></li>
+                <li><a href="postures.html" class="active">Postures</a></li>
+                <li><a href="signup.html" class="">Sign Up</a></li>
             </ul>
         </nav>
 
