--- a/techniques.html
+++ b/techniques.html
@@ -35,16 +35,16 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="">Home</a></li>
-                <li><a href="techniques.html" class="">Techniques</a></li>
+                <li><a href="techniques.html" class="active">Techniques</a></li>
                 <li><a href="postures.html" class="">Postures</a></li>
-                <li><a href="signup.html" class="active">Sign Up</a></li>
+                <li><a href="signup.html" class="">Sign Up</a></li>
             </ul>
         </nav>
 
         <div id="definition">
             <p>to inhale, to exhale</p>
         </div>
-        
+
     </header>
     </section>
     <!-- Main content of page -->
