Remove section from header and id header logo from header h1>

--- a/techniques.html
+++ b/techniques.html
@@ -21,11 +21,9 @@
 <body>
     
     <!-- Header -->
-    <section id="header">
-
         <header>
             <a href="index.html">
-            <h1 id="other-pages-logo">So Hum</h1>
+            <h1>So Hum</h1>
             </a>
         
         <!-- Nav Menu -->
@@ -46,7 +44,7 @@
         </div>
 
     </header>
-    </section>
+
     <!-- Main content of page -->
 
 <section class="getting-started">
