Add content to counting section on techniques page with css styling and parallax

--- a/techniques.html
+++ b/techniques.html
@@ -56,8 +56,7 @@
             <br>
             It is normal for the mind to wander at the beginning of your journey. Be patient with yourself and think of it as a marathon and
             not a sprint. You wouldn't run a marathon without training first so think of your meditation as training for the
-            longer practices
-            in the future.
+            longer practices in the future.
             <br>
             <br>
             See our <a href="postures.html" id="postures-link">postures</a> page for recommendations on how to make yourself
@@ -71,22 +70,43 @@
 </section>
 
 
-<section>    
-    <div>
+<section class="counting-parallax">    
+    <div id="techniques-title">
         <h4>Counting</h4>
-        <h5>What is it?</h5>
-        <p>It is exactly what it sounds like. </p>
-        <h5>Benefits</h5>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <h5>Methods</h5>
-        <p></p>
     </div>
+        <div class="techniques">
+            <div id="techniques-text">
+                <h5>What is it?</h5>
+                <p>It is exactly what it sounds like. During this practice you will be focussing your 
+                attention on something other than your thoughts. Your mind will naturally wander so this method is a good
+                practice to help bring the attention back to focussing on something other than distracting thoughts.</p>
+            </div>
+            <div id="techniques-text">
+                <h5>Benefits</h5>
+                <ul>
+                    <li>Good beginners technique</li>
+                    <li>Strengthens the focus of the mind</li>
+                    <li>Easy to develop into longer meditations</li>
+                </ul>
+            </div>
+            <div id="techniques-text"> 
+                <h5>Methods</h5>
+                <h6>Breath Counting</h6>
+                <p>In your comfortable meditation posture with eyes closed and after your conditioning. 
+                    Start to count the breaths on the inhale and the exhale up to number of 10 and repeat. 
+                    eg. Inhale is 1, exhale is 2, inhale is 3 etc. 
+                    Repeat this method for 5 minutes. 
+                </p>
+                <h6>Numerical Counting</h6>
+                <p>In your comfortable meditation posture with eyes closed and after your conditioning.
+                    Start to count freely in your head from 1 up to 100. Repeat this method for 5 minutes. 
+                    You can also practice this in reverse. 
+                </p>
+            </div>    
+        </div>
 </section>
 
+<!-- 
 <section>
     <div>
         <h4>Samatha</h4>
@@ -118,7 +138,7 @@
         <p></p>
     </div>
 </section>
-    
+-->    
     
 <!-- Footer -->
 <footer>
