Add content to focus meditation section and change background image of counting meditation section so text is easier to read

--- a/techniques.html
+++ b/techniques.html
@@ -106,23 +106,37 @@
         </div>
 </section>
 
-<!-- 
-<section>
-    <div>
-        <h4>Samatha</h4>
-        <h5>What is it?</h5>
-        <p></p>
-        <h5>Benefits</h5>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <h5>Methods</h5>
-        <p></p>
-    </div>
+
+<section class="focus-parallax">
+    <div id="techniques-title">
+        <h4>Focus</h4>
+    </div>    
+        <div class="techniques">
+            <div id="techniques-text">
+                <h5>What is it?</h5>
+                <p>The focus meditation also know as Samatha or focussed attention meditation (FAM) in some practices 
+                    is a practice where the practitioner focusses the attention on a thought, sound, sensations or object of their choosing.
+                    An early example of this is the fire gazing meditation mentioned previously on this website. 
+                    Another good practice where if the mind wanders the practitioner can bring the attention back to their chosen 
+                    focus for this meditation. 
+                </p>
+            </div>
+            <div id="techniques-text">
+                <h5>Benefits</h5>
+                <ul>
+                    <li>Good beginners technique</li>
+                    <li>Helps you stay present</li>
+                    <li>Increases focus and concentration</li>
+                </ul>
+            </div>
+            <div id="techniques-text">
+                <h5>Methods</h5>
+                <p></p>
+            </div>
+        </div>
 </section>
 
+<!--
 <section>
     <div>
         <h4>Noting</h4>
