Add content to focus section on techniques page

--- a/techniques.html
+++ b/techniques.html
@@ -115,7 +115,7 @@
             <div id="techniques-text">
                 <h5>What is it?</h5>
                 <p>The focus meditation also know as Samatha or focussed attention meditation (FAM) in some practices 
-                    is a practice where the practitioner focusses the attention on a thought, sound, sensations or object of their choosing.
+                    is a practice where the practitioner focusses the attention on a thought, sound, sensation or object of their choosing.
                     An early example of this is the fire gazing meditation mentioned previously on this website. 
                     Another good practice where if the mind wanders the practitioner can bring the attention back to their chosen 
                     focus for this meditation. 
@@ -131,7 +131,16 @@
             </div>
             <div id="techniques-text">
                 <h5>Methods</h5>
-                <p></p>
+                <h6>Candle</h6>
+                <p>In your comfortable meditation posture with eyes closed and after your conditioning. Have a lit candle
+                    placed in front of you. Without damaging your sight gently focus your gaze on the flame for the 
+                    duration of your practice. If the mind wanders, bring your focus back to the candle. 
+                </p>
+                <h6>Sensation</h6>
+                <p>In your comfortable meditation posture with eyes closed and after your conditioning. Bring your attention to 
+                    the sensation of the contact of your body with the floor and with the feeling of your breath moving in your 
+                    body. 
+                </p>
             </div>
         </div>
 </section>
