Uncomment Noting section on techniques page and add section div class and id attributes in relevant sections

--- a/techniques.html
+++ b/techniques.html
@@ -145,23 +145,31 @@
         </div>
 </section>
 
-<!--
-<section>
-    <div>
+
+<section class="focus-parallax">
+    <div id="techniques-title">
         <h4>Noting</h4>
-        <h5>What is it?</h5>
-        <p></p>
-        <h5>Benefits</h5>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <h5>Methods</h5>
-        <p></p>
+    </div>    
+        <div class="techniques">
+            <div id="techniques-text">
+                <h5>What is it?</h5>
+                <p></p>
+            </div>
+            <div id="techniques-text">
+                <h5>Benefits</h5>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div id="techniques-text">  
+                <h5>Methods</h5>
+                <p></p>
+            </div>    
     </div>
 </section>
--->    
+   
     
 <!-- Footer -->
 <footer>
