Add content to Noting section on techniques page

--- a/techniques.html
+++ b/techniques.html
@@ -153,14 +153,18 @@
         <div class="techniques">
             <div id="techniques-text">
                 <h5>What is it?</h5>
-                <p></p>
+                <p>Noting or mental noting is a technique used to help the practitioner notice and let go of distractions 
+                    by practicing awareness of thoughts, sensations and sounds that have caused the practitioner to lose 
+                    focus. The meditator can then give these a label to help them recognise and develop a method of 
+                    detachment from distracting thoughts, sensations and sounds. 
+                </p>
             </div>
             <div id="techniques-text">
                 <h5>Benefits</h5>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Helps create awareness and strengthen focus</li>
+                    <li>Develops a deeper awareness of the mind</li>
+                    <li>Healthy detachment from distractions</li>
                 </ul>
             </div>
             <div id="techniques-text">  
