Add image for parallax in Noting section on techniques page

--- a/techniques.html
+++ b/techniques.html
@@ -146,7 +146,7 @@
 </section>
 
 
-<section class="focus-parallax">
+<section class="noting-parallax">
     <div id="techniques-title">
         <h4>Noting</h4>
     </div>    
